<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsOfSolarSystemActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"/>

        <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextCon.Title"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/spaceobject_name"/>

        <TextView
                style="@style/TextCon.Subtitle"
                android:layout_marginBottom="16dp"
                android:text="@string/solarsys_desc"/>

        <TextView
                android:id="@+id/tv_item_desc"
                style="@style/TextCon.Black"
                android:layout_marginBottom="16dp"
                android:text="@string/solarsys_desc"/>

        <TextView
                style="@style/TextCon.Subtitle"
                android:layout_marginBottom="8dp"
                android:text="@string/data_object"/>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                        style="@style/TextData.Field"
                        android:text="@string/orbital_period"/>

                <TextView
                        android:id="@+id/tv_item_orbitP"
                        style="@style/TextData.Value"
                        android:text="@string/solarsys_orbitP"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                <TextView
                        style="@style/TextData.Field"
                        android:text="@string/rotation_period"/>

                <TextView
                        android:id="@+id/tv_item_rotP"
                        style="@style/TextData.Value"
                        android:text="@string/solarsys_rotP"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                <TextView
                        style="@style/TextData.Field"
                        android:text="@string/area"/>

                <TextView
                        android:id="@+id/tv_item_area"
                        style="@style/TextData.Value"
                        android:text="@string/solarsys_area"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                <TextView
                        style="@style/TextData.Field"
                        android:text="@string/mass"/>

                <TextView
                        android:id="@+id/tv_item_mass"
                        style="@style/TextData.Value"
                        android:text="@string/solarsys_mass"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                <TextView
                        style="@style/TextData.Field"
                        android:text="@string/volume"/>

                <TextView
                        android:id="@+id/tv_item_volume"
                        style="@style/TextData.Value"
                        android:text="@string/solarsys_vol"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                <TextView
                        style="@style/TextData.Field"
                        android:text="@string/diameter"/>
                <TextView
                        android:id="@+id/tv_item_diameter"
                        style="@style/TextData.Value"
                        android:text="@string/solarsys_diameter"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>