<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AboutProfile"
        android:background="@android:color/white">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_gravity="center"
            tools:src="@android:color/darker_gray"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorInfo"
            android:layout_marginBottom="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_person_white_24dp"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                        style="@style/TextProfil.Field"
                        android:text="@string/name"/>

                <TextView
                        style="@style/TextProfil.Value.White"
                        android:text="@string/my_name"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorInfo">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_mail_outline_white_24dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                        style="@style/TextProfil.Field"
                        android:text="@string/e_mail"/>

                <TextView
                        style="@style/TextProfil.Value.White"
                        android:text="@string/my_email"
                        android:textColor="@android:color/white"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>